# Clade

./: .gitignore  API_GUIDE.md  DEV_DOC.md  LICENSE  README.md  commit_msg.txt  evolution_refactor_plan.md  lang_zh.json  map_visualization.html  package-lock.json  package.json  start.bat  start.ps1  stop.bat  stop.ps1  test_budget_quick.py
backend/: .env.example  REFACTORING_GUIDE.md  pyproject.toml
docs/: ECOLOGICAL_REALISM_DESIGN.md  FRONTEND_OPTIMIZATION_PLAN.md  LLM_STRATEGY.md  PROMPT_ENGINEERING.md  TRAIT_BUDGET_SYSTEM_DESIGN.md
frontend/: .prettierignore  .prettierrc  FRONTEND_REFACTOR_PLAN.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend_legacy/: index.html  package-lock.json  tsconfig.json
old_version/backend/: pyproject.toml
old_version/backend/app/ai/prompts/: terrain.py
old_version/backend/app/api/: routes.py
old_version/backend/app/core/: config.py  database.py
old_version/backend/app/models/: config.py  environment.py  genus.py  history.py
old_version/backend/app/repositories/: genus_repository.py
old_version/backend/app/schemas/: responses.py  terrain.py
old_version/backend/app/services/: adaptation.py  critical_analyzer.py  embedding.py  focus_processor.py  gene_activation.py  gene_library.py  map_manager.py  pressure.py  report_builder.py  species_generator.py  tiering.py  trophic.py
old_version/backend/app/simulation/: engine.py  environment.py
scripts/: add_trophic_level.py  check_species_data.py  final_verification.py  fix_and_check_descriptions.py  (+6 more)
(+450 files in other folders)
